--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<article id="portfolio" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Here’s some stuff I made recently.</h2>
+							<h2>Projects I'm proud of.</h2>
 							<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 						</header>
 						<div class="row">
